--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,12 @@
 /backend/uploads
 /backend/.chroma
 /backend/__pycache__
+/uploads
+/.chroma
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
